fixed some bugs

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,9 +10,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Levels/TestLevel.TestLevel
+GameDefaultMap=/Game/Levels/MainMenu_Map.MainMenu_Map
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=None
+GlobalDefaultGameMode=/Game/TornadoGameMode_BP.TornadoGameMode_BP_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
