--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -93,7 +93,7 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Levels/MainMenu_Map")
-+MapsToCook=(FilePath="/Game/Levels/TestLevel")
++MapsToCook=(FilePath="/Game/Levels/OfficeLevel1")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
