--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -94,6 +94,7 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Levels/MainMenu_Map")
 +MapsToCook=(FilePath="/Game/Levels/OfficeLevel1")
++MapsToCook=(FilePath="/Game/Levels/OfficeLevel2")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
